--- a/debian/buster/debian/changelog
+++ b/debian/buster/debian/changelog
@@ -1,3 +1,9 @@
+ignition-fuel-tools5 (5.0.0-1~buster) buster; urgency=medium
+
+  * ignition-fuel-tools5 5.0.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Tue, 29 Sep 2020 20:05:01 -0700
+
 ignition-fuel-tools5 (5.0.0~pre1-1~buster) buster; urgency=medium
 
   * ignition-fuel-tools5 5.0.0~pre1-1 release
