--- a/debian/sid/debian/changelog
+++ b/debian/sid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-fuel-tools6 (6.0.0~pre1-1~bionic) bionic; urgency=medium
+
+  * ignition-fuel-tools6 6.0.0~pre1-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Tue, 23 Mar 2021 10:32:04 -0700
+
 ignition-fuel-tools6 (5.999.999-1~bionic) bionic; urgency=medium
 
   * Stub to be removed after first entry
