--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-fuel-tools6 (6.0.0-1~bionic) bionic; urgency=medium
+
+  * ignition-fuel-tools6 6.0.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Wed, 31 Mar 2021 14:16:06 -0700
+
 ignition-fuel-tools6 (6.0.0~pre1-1~bionic) bionic; urgency=medium
 
   * ignition-fuel-tools6 6.0.0~pre1-1 release
